kubernetes/frontend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    component: web
spec:
  containers:
    - name: anybooker-frontend
      image: pesiok/anybooker-frontend
      ports:
        - containerPort: 3000
