kubernetes/backend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
   - port: 8000
     targetPort: 8000
