kubernetes/frontend-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-port
spec:
  type: NodePort
  ports:
    - ports: 3050
      targetPort: 3000
      nodePort: 31515
  selector:
    component: web
